feat: JDK17 loom build upgrade and a lot of fixes.